Fixed overlapping inner header

--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -170,13 +170,16 @@
             width: auto;
             margin-left: 2em;
 		}
+		@include atExtralarge {
+			width: 100%;
+			max-width: 1140px;
+		}
 		@include atExtrahuge {
 			position: absolute;
-			z-index: -1;
+			z-index: 1;
 			bottom: 0;
 			left: 50%;
 			transform: translateX(-50%);
-            width: 100%;
             margin-left: 0;
 		}
 
@@ -308,7 +311,8 @@
 					justify-content: space-between;
                 }
                 @include atExtrahuge {
-                    display: block !important;
+					display: block !important;
+					flex: initial;
                 }
 			}
 
